--- a/TimeOverHttp/TimeOverHttp.csproj
+++ b/TimeOverHttp/TimeOverHttp.csproj
@@ -53,6 +53,9 @@
   <PropertyGroup>
     <ApplicationIcon>clock.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -106,6 +109,7 @@
       <DependentUpon>ProxyWindow.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
